public/style.css
/* ... */
.jg-button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 3px 5px;
  color: white;
  border: 1px solid rgba(0,0,0,0.5);
  border-radius: 3px;
}

.thumbnail .jg-unlock,
.thumbnail .jg-copy {
  display: none;
}

.thumbnail.locked .jg-lock {
  display: none;
}

.thumbnail.locked .jg-unlock {
  display: flex;
}

.thumbnail[custom="true"] .jg-copy {
  display: flex;
}

.thumbnail[custom="true"] .jg-lock,
.thumbnail[custom="true"] .jg-unlock,
.thumbnail[custom="true"] .jg-edit {
  display: none;
}

.thumbnail .BGSampleTitle {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0,0,0,0.6);
  color: white;
  font-size: 0.8em;
  padding: 2px 4px;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

